--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ h1, h2, p {
                 </nav>
             </header>
             <div style="text-align: center; margin: 20px 0;">
-                <img src="/pictures/Earn-these-qualifications-For-a-Digital-Marketing-Job6.png (1).png" alt="Descriptive Text" style="max-width: 30%; height: auto; border-radius: 10px;">
+                <img src="/pictures/png.png" alt="Descriptive Text" style="max-width: 30%; height: auto; border-radius: 10px;">
             </div>
             <section class="hero">
                 
